# ijkplayer_thrid_party

./: .gitignore  README.md  android.sh  init-android-libyuv.sh  init-android-openssl.sh  init-android-soundtouch.sh  init-android.sh  init-cmake-with-android.md  init-ios-openssl.sh  init-ios-x264.sh  init-ios.sh  ios.sh  link-cmake.sh  readme.txt
android/: .gitignore  cp-jni-libs.sh
android/ijkplayer/: build.gradle  settings.gradle
android/ijkplayer/_gradle_files/: 32.gradle  64.gradle
android/ijkplayer/ijkplayer-arm64/: build.gradle
android/ijkplayer/ijkplayer-armv7a/: build.gradle
android/ijkplayer/ijkplayer-cmake/: build.gradle
android/ijkplayer/ijkplayer-example/: build.gradle
android/ijkplayer/ijkplayer-exo/: build.gradle
android/ijkplayer/ijkplayer-java/: build.gradle
config/: module-lite.sh  module.sh
ijkmedia/: CMakeLists.txt  st.cmake  yuv.cmake
ijkmedia/ijkj4a/: CMakeLists.txt
ijkmedia/ijkplayer/: Android.mk  CMakeLists.txt  ff_ffplay.c  ff_ffplay.h  ff_ffplay_def.h  ijkplayer.c  ijkplayer.h
ijkmedia/ijkplayer/android/: ijkplayer_jni.c
ijkmedia/ijksdl/: CMakeLists.txt  ijksdl_thread.c
ijkmedia/ijksdl/android/: android_nativewindow.c
ijkprof/android-ndk-profiler-dummy/jni/: CMakeLists.txt
ios/: .gitignore  build-all.sh  compile-common.sh  compile-ffmpeg.sh  compile-openssl.sh  compile-x264.sh  lipo_product.sh
ios/IJKMediaPlayer/: copy_fw.sh  merge.sh
ios/pod/: FlutterIJK.podspec  README.md  podspec.template  upload.py  upload.sh
ios/tools/: do-compile-ffmpeg.sh  do-compile-openssl.sh
shell/: compile-android.sh
(+34 files in other folders)
